<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.masahiro.myminislot.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:id="@+id/textView" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="16dp"
        android:text="@string/Reset"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/HaveCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Have"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/Coin"
        android:layout_marginStart="33dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="21dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="33dp" />

    <TextView
        android:id="@+id/Bet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bet"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="114dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="33dp" />

    <Button
        android:id="@+id/up_button"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="25dp"
        android:text="@string/UpBet"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/down_button"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:layout_marginBottom="86dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="83dp"
        android:text="@string/DownBet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/UpBet"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:onClick="onStartSlot"
        android:text="@string/Start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/BetCoin"
        app:layout_constraintRight_toRightOf="@+id/BetCoin"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/Coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HaveMoney"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/Bet"
        android:layout_marginStart="18dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/Bet"
        android:layout_marginLeft="18dp" />

    <TextView
        android:id="@+id/BetCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BetCoin"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/Bet"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/Bet" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="23dp"
        android:layout_marginTop="36dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        android:layout_marginLeft="23dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="90dp"
        android:layout_height="140dp"
        app:srcCompat="@drawable/wakuwaku"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="59dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="54dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ResetCoin" />

</android.support.constraint.ConstraintLayout>
