<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.masahiro.myminislot.GameActivity">

    <ImageView
        android:id="@+id/slot1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        app:layout_constraintRight_toLeftOf="@+id/slot2"
        app:layout_constraintTop_toTopOf="@+id/slot2"
        app:srcCompat="@drawable/question" />

    <ImageView
        android:id="@+id/slot2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/question"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.088"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <ImageView
        android:id="@+id/slot3"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/question"
        app:layout_constraintTop_toTopOf="@+id/slot2"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/slot2"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/stop1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Stop1"
        android:layout_marginStart="26dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/stop2"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="26dp" />

    <Button
        android:id="@+id/stop2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Stop2"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="5dp"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/slot2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/slot2"
        android:layout_marginLeft="-2dp" />

    <Button
        android:id="@+id/stop3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Stop3"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="18dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@+id/slot3"
        android:layout_marginRight="32dp" />

    <TextView
        android:id="@+id/HaveCoin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HaveCoin2"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintRight_toLeftOf="@+id/Coin2"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/Coin2"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/Coin2" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onBackButtonTapped"
        android:text="@string/Back"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="26dp" />

    <TextView
        android:id="@+id/Coin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HavaMoney2"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/Bet2"
        android:layout_marginStart="85dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="9dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="85dp" />

    <TextView
        android:id="@+id/BetCoin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bet2"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/Coin2"
        app:layout_constraintTop_toBottomOf="@+id/Bet2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/Coin2" />

    <TextView
        android:id="@+id/Bet2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BetCoin2"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/back_button"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="@+id/BetCoin2"
        android:layout_marginBottom="38dp"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Yeah"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintRight_toLeftOf="@+id/stop2"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@+id/stop1"
        android:layout_marginRight="3dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="159dp"
        android:layout_height="158dp"
        app:srcCompat="@drawable/ikezaki"
        app:layout_constraintRight_toLeftOf="@+id/stop3"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/stop3"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/stop3" />

</android.support.constraint.ConstraintLayout>
